# de-datalake-bulletin-dataload

./: .dockerignore  .gitignore  BEHAVIOR_MATRIX.md  CHANGELOG.md  Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.json
k8s/: README.md  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/de_datalake_bulletin_dataload/: definitions.py
src/de_datalake_bulletin_dataload/defs/: assets.py  data_exporters.py  resources.py  schedules.py  sensors.py  utilities.py  validators.py
