[project]
name = "de_datalake_bulletin_dataload"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "asyncio>=4.0.0",
    "dagster==1.12.10",
    "duckdb>=1.4.3",
    "httpx>=0.28.1",
    "polars>=1.37.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "de_datalake_bulletin_dataload"
registry_modules = [
    "de_datalake_bulletin_dataload.components.*",
]


