[project]
name = "de_datalake_bulletin_dataload"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.33",
    "dagster==1.12.10",
    "dagster-postgres>=0.28.10",
    "httpx[http2]>=0.28.1",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "de_datalake_bulletin_dataload"
registry_modules = [
    "de_datalake_bulletin_dataload.components.*",
]


